# QATIS

./: .env  .gitignore  GETTING_STARTED.md  MERGE_SUMMARY.md  PACKAGE_SUMMARY.md  QATIS_OSINT_WORKFLOW.md  QUICKSTART.md  README.md  README_SEARCH.md  SOCIAL_STATUS.md  USAGE.md  analyze_results.py  check_dupes.py  export_results_to_csv.py  generate_bib_from_scored.py  merge_csv.py  merge_pmesii_categories.py  merged_pmesii_all.csv  merged_pmesii_intel.csv  pyproject.toml  queries.yaml  queries_general.yaml  queries_social.yaml  queries_social_ui.yaml  queries_ui.yaml  requirements.txt  run_all_pmesii_web.py  run_searches.py  run_social_searches.py  run_web_pmesii_pipeline.sh  search_apis.py  start_ui.sh  test_social.yaml
.qatis-ui/: pyvenv.cfg
OLD/: Areas_Row6_Col2_Operational_Variables.md  Areas_Row6_Col3_Factors.md  Areas_Row6_Col4_Relevance.md  Events_Row6_Col3_Factors.md  Events_Row6_Col4_Relevance.md  Infrastructure_Collection_Queries.md  Infrastructure_PMESII_A_SCOPE.md  Infrastructure_Sources_APA_Short.md  MOLDOVA_INFRASTRUCTURE_MASTER.docx  MOLDOVA_INFRASTRUCTURE_MASTER.md  MOLDOVA_INFRASTRUCTURE_MASTER_APA.docx  MOLDOVA_INFRASTRUCTURE_MASTER_SIMPLIFIED.docx  MOLDOVA_INFRASTRUCTURE_SOURCES_SUMMARY.md  MOLDOVA_SOCIAL_MASTER.md  Organisations_Row6_Col3_Factors.md  Organisations_Row6_Col4_Relevance.md  People_Row6_Col3_Factors.md  People_Row6_Col4_Relevance.md  QAT Intelligence minor research.docx  Structures_Row6_Col3_Factors.md  Structures_Row6_Col4_Relevance.md  moldova_infrastructure_ascope_report.md
assets/: .gitkeep
prompts/: analyze_instruction.md
(+393 files in other folders)
